on mobile view, added fixed height scren when in menu mode. Clicking hamburger toggles this behavior

--- a/source/sass/_front-showpieces.scss
+++ b/source/sass/_front-showpieces.scss
@@ -125,9 +125,9 @@
 		padding: 0;
 	}
 	.front__showpiece__cutoff__text__wrap {
-		width: 50%;
-		margin-left: 25%;
-		padding: 0 0 40px;
+		width: 80%;
+		margin-left: 5%;
+		padding: 0;
 	}
 }
 
@@ -137,4 +137,5 @@
 		margin-left: 20%;
 		padding: 20px;
 	}
+
 }
